# Spectra

./: .gitignore  .lintstagedrc.js  .lintstagedrc.json  .mcp.json  .metadata  AGENTS.md  CHANGELOG.md  CLAUDE.md  DISCLAIMER.md  LICENSE  README.md  analysis_options.yaml  build.yaml  commitlint.config.js  flutter_launcher_icons.yaml  flutter_rust_bridge.yaml  git_hooks.dart  l10n.yaml  package.json  pubspec.yaml  release-please-config.json  spectra.code-workspace
rust/: AGENTS.md  Cargo.toml
rust/.cargo/: config.toml
rust/crates/: AGENTS.md
rust/crates/io_http/: Cargo.toml
rust/crates/rules_engine/: Cargo.toml
rust/crates/rules_ir/: AGENTS.md  Cargo.toml
rust/crates/rules_ir/bindings/: Capabilities.ts  Node.ts  PortRef.ts  rule.ts
rust/crates/rules_ir/src/: diagnostic.rs  lib.rs  normalized_model.rs
rust/crates/rules_validate/: AGENTS.md  Cargo.toml
rust/crates/rules_validate/src/: lib.rs
rust/src/: error.rs  frb_generated.rs  lib.rs
rust/src/api/: crawler_models.rs  html_parser.rs  http_client.rs  lifecycle_executor.rs  mod.rs  similarity.rs  text_processor.rs
rust/src/domain/: mod.rs  phase.rs
rust/src/domain/rule/: crawler_rule.rs  (+4 more)
rust/src/executor/: mod.rs
rust/src/ffi/: mod.rs
rust/src/internal/: html_parser.rs  http_client.rs  mod.rs  similarity.rs  text_processor.rs
rust/src/io_http/: mod.rs
rust/src/rules_engine/: context.rs  error.rs  events.rs  execution.rs  graph.rs  limiter.rs  mod.rs  result.rs  stats.rs  storage.rs  tests.rs  value.rs
rust/src/rules_ir/: mod.rs  normalized_model.rs  ws_protocol.rs
rust/src/rules_validate/: capabilities.rs  edges.rs  graph.rs  mod.rs  phase.rs  topology.rs  types.rs  utils.rs
rust/tests/: adapter_boundary.rs  rules_engine_integration.rs  rules_engine_integration_topology.rs  rules_validate_cache_cookie.rs  rules_validate_fixtures.rs  rules_validate_transform.rs  runtime_session_flow.rs  ws_protocol_correlation.rs
rust/tests/rules_engine_support/: mod.rs
rust/tests/rules_validate_support/: mod.rs
(+680 files in other folders)
