[workspace]
members = [
    ".",
    "crates/rules_ir",
    "crates/rules_validate",
    "crates/rules_engine",
    "crates/io_http",
    "crates/ffi",
]
default-members = [
    ".",
    "crates/rules_ir",
    "crates/rules_validate",
    "crates/rules_engine",
    "crates/io_http",
    "crates/ffi",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[package]
name = "spectra_native"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
