[package]
name = "spectra_native"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
aes = "0.8.4"
base64 = "0.22.1"
cbc = "0.1.2"
chrono = "0.4.44"
ecb = "0.1.2"
encoding_rs = "0.8.35"
flutter_rust_bridge = "=2.11.1"
md5 = "0.8.0"
percent-encoding = "2.3.2"
regex = "1"
rquickjs = "0.11.0"
scraper = "0.23"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_json_path = "0.7"
sxd-document = "0.3"
sxd-xpath = "0.4"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }
ts-rs = { version = "12.0.1", features = ["serde-compat"] }
url = "2"
wreq = { version = "5", default-features = false, features = ["json", "cookies", "webpki-roots"] }
